feat: 顧客の複数連絡先と変更履歴を管理する (#966)
* feat: 顧客の複数連絡先と変更履歴を管理する (#957)

* fix: 顧客連絡先の部分検索と失敗時の回復を修正する

JPQL のエンティティ参照を全限定名へ揃える。国内電話の部分検索を
保存形式へ合わせ、完全な番号の正規化と名前・LINE ID の原文検索を保つ。
連絡先操作の 404 は一覧と履歴を再取得して warning で通知し、
顧客作成時の連絡先エラーはサーバの具体的な理由を表示する。

HTTP とページの回帰テスト、および入力修正・並行削除の E2E を追加。